Fixed: table overflows on 8 cols.

--- a/static/CSS/game_style.css
+++ b/static/CSS/game_style.css
@@ -26,7 +26,6 @@ header {
     color: white;
     text-shadow: 1px 1px 1px black;
     border: 3px solid white;
-    
 }
 
 #game-info-text {
@@ -45,7 +44,6 @@ header {
     background: #436892;
     border-radius: 20px;
     box-shadow: 1px 1px 3px 1px black inset;
-    
 }
 
 #wrapper {
@@ -57,6 +55,10 @@ header {
     border-width: 0px 5px 0px 5px;
     border-style: solid;
     border-color: #fff;
+}
+
+#game {
+    overflow-x:auto;
 }
 
 #game table {
